[package]
name = "live-cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
tokio = "1"
actix-cors = "0.7"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.24"

image = "0.24"
structopt = "0.3"

[target.'cfg(target_os="windows")'.dependencies]
escapi = "4.0"

[target.'cfg(not(target_os="macos"))'.dependencies]
opencv = '0.89.0'
